continuing plugin rewrite